UIA IsOffscreen property not supported
Categories
(Core :: Disability Access APIs, defect)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox-esr128 | --- | unaffected |
| firefox-esr140 | --- | disabled |
| firefox139 | --- | disabled |
| firefox140 | --- | disabled |
| firefox141 | --- | fixed |
People
(Reporter: Jamie, Assigned: Jamie)
References
(Blocks 1 open bug, Regression)
Details
(Keywords: regression, Whiteboard: [uiaShipBlocker])
Attachments
(1 file)
We don't currently support the UIA IsOffscreen property. The IA2 -> UIA proxy does.
I'm triaging this as s2 and a ship blocker because I think this is causing Voice Access to find elements in background tabs, which is particularly problematic when using "show numbers"; it's pretty much unusable. This doesn't happen with UIA disabled, likely because the proxy does support this.
| Assignee | ||
Updated•9 months ago
|
| Assignee | ||
Comment 1•9 months ago
|
||
This should hopefully also fix the Voice Access bug where the menu bar shows up in "show numbers", even when it's not visible. It does have the off-screen state in our core tree.
Comment 2•9 months ago
|
||
Set release status flags based on info from the regressing bug 1957314
| Assignee | ||
Updated•9 months ago
|
| Assignee | ||
Comment 3•9 months ago
|
||
Comment 5•9 months ago
|
||
| bugherder | ||
Comment 6•9 months ago
|
||
Set release status flags based on info from the regressing bug 1957314
Updated•9 months ago
|
| Assignee | ||
Comment 7•9 months ago
|
||
This does indeed fix the issue with Voice Access "show numbers" finding things in background tabs.
Updated•9 months ago
|
Description
•