Bug 1972253: Support the UIA IsOffscreen property. r=morgan

Differential Revision: https://phabricator.services.mozilla.com/D253796